--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,7 +45,10 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app always needs access to your location while driving to provide accurate
+		navigation.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Reason why we need access to your location</string>
+	<string>This app needs access to your location while driving to provide accurate navigation.</string>
 </dict>
 </plist>
