--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   latlong2: ^0.9.1
   url_launcher: ^6.3.0
   provider: ^6.0.1
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
