--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   url_launcher: ^6.3.0
   provider: ^6.0.1
   flutter_spinkit: ^5.2.1
+  http: ^1.2.2
+  flutter_map_cancellable_tile_provider: ^3.0.0
 
 dev_dependencies:
   flutter_test:
