--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   http: ^1.2.2
   flutter_map_cancellable_tile_provider: ^3.0.0
+  flutter_map_math: ^0.1.7
 
 dev_dependencies:
   flutter_test:
