--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,13 @@ dependencies:
   flutter_map_math: ^0.1.7
   prompt_dialog: ^1.0.16 
 
+  # map cache
+  #flutter_map_cache: ^1.5.1
+  #path_provider: ^2.1.4
+  #dio_cache_interceptor_file_store: ^1.2.3
+  #dio_cache_interceptor: ^3.5.0
+  # map cache
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
